--- a/.github/workflows/get-my-kernel-format.yml
+++ b/.github/workflows/get-my-kernel-format.yml
@@ -3,7 +3,7 @@ name: Process boot.img from URL
 on:
   workflow_dispatch: # Allow manual triggering of the workflow
     inputs:
-      boot_img_url:
+      boot_img_url:https://filebin.net/6ch33hoio9mv4zd7/opboot.img
         description: "URL to download the boot.img file"
         required: true
         type: string
